--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
-node_modules
-.env
+
+*.dll
+*.pdb
+*.exe
+*.vsidx
+Bracket-Generator/.vs/Bracket-Generator/DesignTimeBuild/.dtbcache.v2
+Bracket-Generator/.vs/Bracket-Generator/FileContentIndex/read.lock
+Bracket-Generator/.vs/Bracket-Generator/v17/.suo
+*.cache
+
+# From .NET Core 3.0 you can use the command: `dotnet new gitignore` to generate a customizable .gitignore file
+
+*.swp
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
+
+# Visual Studio Code
+.vscode
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+msbuild.log
+msbuild.err
+msbuild.wrn
+
+# Visual Studio 2015
+.vs/
