--- a/Bracket-Generator/WorkerProcess/WorkerProcess.csproj
+++ b/Bracket-Generator/WorkerProcess/WorkerProcess.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,10 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.12.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Record Keeping\" />
   </ItemGroup>
 
 </Project>
